# ux_research

./: .gitignore  README.md  agent.py  file_server.py  main.py  pyproject.toml  ux.yaml  ux_app.py  wl_server.py
src/assets/: template.json
src/modules/: UI_manager.py  config.py  db.py  file_handler.py  oci_client.py
